<resources>
    <string name="app_name">weatherApp</string>
    <string name="temperature"> </string>
    <string name="cityName"> </string>
    <string name="minTemp">Min: </string>
    <string name="maxTemp">Max: </string>
    <string name="pressure">CIŚNIENIE</string>
    <string name="humidity">WILGOTNOŚĆ</string>
    <string name="wind">PRĘDKOŚĆ WIATRU</string>
    <string name="rainingChance">OPADY</string>
    <string name="clouds">ZACHMURZENIE</string>
    <string name="tomorrow">Jutro</string>
    <string name="secondDay">Pojutrze</string>
    <string name="fetchNewData">Pobierz najnowsze dane</string>
    <string name="fetchData">Pobierz dane</string>
    <string name="changeUnits">Zmień jednostki</string>
    <string name="deleteCity">Wyczysć listę</string>
    <string name="visibility">WIDOCZNOŚĆ</string>
    <string name="set_units">Ustaw jednostki:</string>
    <string name="windDirection">KIERUNEK WIATRU</string>
    <string name="selectLocation">Wprowadź lokalizacje</string>
    <string name="search">Szukaj</string>
</resources>