<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/adding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="6"
        >
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8dp">
            <EditText
                android:id="@+id/location_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Wprowadź lokalizacje"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="8dp"
            android:weightSum="2">
            <Button
                android:id="@+id/show_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pokaż"
                android:autoSizeTextType="uniform"/>
            <Button
                android:id="@+id/add_location_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Dodaj"
                android:autoSizeTextType="uniform"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cityList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/adding">

<!--        <LinearLayout-->
<!--            android:id="@+id/buttonsTemplate"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/test"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="3"-->
<!--                android:text="name"-->
<!--                android:autoSizeTextType="uniform"/>-->
<!--            <Button-->
<!--                android:id="@+id/test2"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Usuń"-->
<!--                android:autoSizeTextType="uniform"/>-->

<!--        </LinearLayout>-->

<!--       Button-->
        <!--            android:id="@+id/test"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="miasto "-->
        <!--            android:autoSizeTextType="uniform"-->
        <!--            />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/cityList"
        android:weightSum="4">
        <Button
            android:id="@+id/fetchData"
            android:text="@string/fetchData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autoSizeTextType="uniform"
            />
        <Button
            android:id="@+id/deleteCity"
            android:text="@string/deleteCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autoSizeTextType="uniform"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/changeUnitsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/settings"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/cityName"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_units"
            android:layout_gravity="center"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="150sp"
            android:autoSizeStepGranularity="2sp"
            android:textSize="20sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/chooseTempUnits"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>

            <Spinner
                android:id="@+id/chooseDistUnits"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
